--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>SYNIMA - All in one platform for your business</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>All in one platform for your business</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
