--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="All in one platform for your business"
     />
      
   
@@ -22,7 +22,7 @@
     <title>SYNIMA - All in one platform for your business</title>
   </head>
   <body>
-    <noscript>All in one platform for your business</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
